# Tira-connect4

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
Documentation/: Implementation-document.md  Viikkoraportti-1.md  Viikkoraportti-2.md  Viikkoraportti-3.md  Viikkoraportti-4.md  Viikkoraportti-5.md  Viikkoraportti-6.md  Viikkoraportti-7.md  project-definition.md  test-document.md  user-manual.md
src/: index.py
src/Gui/: GUI.py
src/game/: game_main.py
src/logic/: AI.py  logictests.py  matrix_logic.py
src/tests/: logictests.py  performance-tests.py
