[tool.poetry]
name = "connect4-dependencies"
version = "0.1.0"
description = ""
authors = ["Juska <juseljus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.2.0"
numpy = "^1.24.2"
invoke = "^2.0.0"
coverage = "^7.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pylint = "^2.17.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
